--- a/leaderboard.yml
+++ b/leaderboard.yml
@@ -20,10 +20,9 @@ jobs:
     - run: yarn "leaderboard:triggerNextCrawl"
       env:
         HUBSPOT_SECRET: ${{ secrets.HUBSPOT_SECRET }}
-        GOERLI_API_KEY: ${{ secrets.GOERLI_API_KEY }}
         SEPOLIA_API_KEY: ${{ secrets.SEPOLIA_API_KEY }}
-        ARB_GOERLI_API_KEY: ${{ secrets.ARB_GOERLI_API_KEY }}
-        OPT_GOERLI_API_KEY: ${{ secrets.OPT_GOERLI_API_KEY }}
+        ARB_SEPOLIA_API_KEY: ${{ secrets.ARB_SEPOLIA_API_KEY }}
+        OPT_SEPOLIA_API_KEY: ${{ secrets.OPT_SEPOLIA_API_KEY }}
         MUMBAI_API_KEY: ${{ secrets.MUMBAI_API_KEY }}
     - name: Commit files
       run: |
