--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "alchemy-sdk": "^2.2.3",
+    "alchemy-sdk": "3.2.1",
     "axios": "^1.3.1",
     "dotenv": "^16.0.3",
     "web3": "1.8.2"
