:rocket: Deprecate mumbai and deploy amoy

--- a/.github/workflows/updateLeaderboard.yml
+++ b/.github/workflows/updateLeaderboard.yml
@@ -20,7 +20,7 @@ jobs:
           SEPOLIA_API_KEY: '${{ secrets.SEPOLIA_API_KEY }}'
           ARB_SEPOLIA_API_KEY: '${{ secrets.ARB_SEPOLIA_API_KEY }}'
           OPT_SEPOLIA_API_KEY: '${{ secrets.OPT_SEPOLIA_API_KEY }}'
-          MUMBAI_API_KEY: '${{ secrets.MUMBAI_API_KEY }}'
+          AMOY_API_KEY: '${{ secrets.AMOY_API_KEY }}'
       - name: Commit files
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
